# parking-gate

./: .gitignore  CMakeLists.txt
src/: images.qrc  main.cpp  qml.qrc
src/modules/parkingdb/: parkingdb.cpp  parkingdb.h
src/qml/: main.qml
src/qml/components/: AlertDialog.qml  BackButton.qml  CameraFrame.qml  CommonTextField.qml  DateTimeText.qml  DetailRow.qml  DropdownButton.qml  MenuButton.qml  StackViewItem.qml  SubmitButton.qml  WhiteText.qml
src/qml/pages/: CheckInPage.qml  CheckOutPage.qml  HomePage.qml
